# libcamera

./: AF_ALGORITHM_DETAILED_REPORT.md  AF_ALGO_IMPLEMENTATION_COMPLETE.md  AF_ALGO_INTEGRATION_PLAN.md  AF_CODE_CHANGES.md  AF_COMPLETE_IMPLEMENTATION.md  AF_CONTROL_USAGE.md  AF_GAP_ANALYSIS.md  AF_IMPLEMENTATION_CHECKLIST.md  AF_IMPLEMENTATION_PLAN.md  AF_INTEGRATION_ANALYSIS.md  ARCHITECTURE_ANALYSIS.md  BUILD_AND_RUN_GUIDE.md  BUILD_COMPLETE.md  CAPTURE_STATUS.md  COEFFICIENT_MANAGER.md  COEFFICIENT_MANAGER_API.md  COMPARISON_SIMPLE_PIPELINE.md  COMPLETION_REPORT.md  COMPREHENSIVE_ANALYSIS.md  DEVELOPMENT_MODE_STATUS.md  FEATURE_STATUS.md  FINAL_BUILD_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_TEST_RESULTS.md  GCC_TEST_RESULT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODO.md  IMPLEMENTATION_VERIFICATION.md  INFERENCE_IMPLEMENTATION_COMPLETE.md  INVOKE_METHOD_ANALYSIS.md  IPA_BUILD_COMPLETE.md  IPA_IMPLEMENTATION_PLAN.md  LIBCAMERA_ARCHITECTURE_EXPLANATION.md  LIBIPA_COMPLIANCE_REPORT.md  MERGE_SKILL.md  MERGE_SUMMARY.md  (+62 more)
.github/workflows/: main.yml
.tmp/: SOFTISP_VIRTUAL_CAMERA_FIXED.md  build-check.sh  capture_log.txt  frame_times.txt  full_cam_log.txt  part2.txt  perf_log.txt  softisp.h.good  softisp.h.restored  softisp_temp.cpp  test_frame_capture.sh  test_softisp.cpp
.tmp/test_models/: applier.onnx
docs/: AF_INTEGRATION.md  AF_INTEGRATION_COMPLETE.md  AF_INTEGRATION_FINAL.md  DECOUPLING_VIRTUAL_CAMERA.md  REFACTOR_DUMMYSOFTISP_WITH_STUB.md  af_stats_example.cpp
include/libcamera/internal/: ipa_manager.h
include/libcamera/internal/software_isp/: swisp_stats.h  swstats_cpu.h
include/libcamera/ipa/: dummysoftisp.mojom  libplacebo.mojom  meson.build  soft.mojom  soft_ipa_interface.h  softisp.mojom
scripts/: validate-meson.sh
src/: meson.build
src/apps/: meson.build  softisp-save.cpp
src/apps/cam/: camera_session.cpp
src/ipa/: meson.build
src/ipa/dummysoftisp/: meson.build  softisp_module.cpp
src/ipa/libipa/: af_algo.cpp  af_algo.h  af_controls.h  af_stats.cpp  af_stats.h  meson.build
src/ipa/libplacebo/: meson.build
src/ipa/simple/: meson.build
src/ipa/simple/algorithms/: af.cpp  af.h  meson.build
src/ipa/softisp/: ARCHITECTURE.md  MODULAR_STRUCTURE.md  README.md  README_TESTING.md  SoftIsp_computeParams.cpp  SoftIsp_configure.cpp  SoftIsp_constructor.cpp  SoftIsp_init.cpp  SoftIsp_logPrefix.cpp  SoftIsp_processFrame.cpp  SoftIsp_processStats.cpp  SoftIsp_queueRequest.cpp  SoftIsp_start.cpp  SoftIsp_stop.cpp  algorithm.h  coefficient_manager.cpp  coefficient_manager.h  computeParams.cpp  configure.cpp  meson.build  module.h  onnx_engine.cpp  onnx_engine.h  onnx_engine_dlopen.cpp  onnx_engine_ort.cpp  processFrame.cpp  processStats.cpp  queueRequest.cpp  softisp.cpp  softisp.h  softisp_full_test.cpp  softisp_inference_stub.cpp  softisp_module.cpp  softisp_module.h  softisp_stub.cpp  softisp_test.cpp  softisp_virtual_module.cpp  start.cpp
src/libcamera/: camera_manager.cpp  device_enumerator_sysfs.cpp  ipa_manager.cpp
src/libcamera/base/: thread.cpp
src/libcamera/internal/: virtual_camera_stub.h
src/libcamera/pipeline/dummy_softisp/: softisp.cpp  softisp.h
src/libcamera/pipeline/dummysoftisp/: meson.build  softisp.cpp  softisp.h  virtual_camera.cpp  virtual_camera.h
src/libcamera/pipeline/libplacebo/: libplacebo.cpp  meson.build
src/libcamera/pipeline/softisp/: ASYNC_ARCHITECTURE.md  ASYNC_BUFFER_LIFECYCLE.md  COMPILATION_NOTES.md  PipelineSoftISP_configure.cpp  PipelineSoftISP_constructor.cpp  PipelineSoftISP_destructor.cpp  PipelineSoftISP_exportFrameBuffers.cpp  PipelineSoftISP_generateConfiguration.cpp  PipelineSoftISP_match.cpp  PipelineSoftISP_new.cpp  PipelineSoftISP_queueRequestDevice.cpp  PipelineSoftISP_start.cpp  PipelineSoftISP_stopDevice.cpp  README.md  README_USAGE.md  REFACTORING_COMPLETE.md  SoftISPCamera_configure.cpp  SoftISPCamera_constructor.cpp  SoftISPCamera_data.cpp  SoftISPCamera_destructor.cpp  SoftISPCamera_exportFrameBuffers.cpp  SoftISPCamera_frameDone.cpp  SoftISPCamera_generateConfiguration.cpp  SoftISPCamera_getBufferFromId.cpp  SoftISPCamera_init.cpp  SoftISPCamera_loadIPA.cpp  SoftISPCamera_metadataReady.cpp  SoftISPCamera_onIPAFrameDone.cpp  SoftISPCamera_processRequest.cpp  SoftISPCamera_queueRequest.cpp  SoftISPCamera_start.cpp  SoftISPCamera_stop.cpp  SoftISPCamera_storeBuffer.cpp  SoftISPCamera_tryCompleteRequest.cpp  SoftISPConfig_constructor.cpp  SoftISPConfig_validate.cpp  SoftISPFrames_destroy.cpp  SoftISPFrames_find.cpp  meson.build  placeholder_stream.h  (+33 more)
src/libcamera/pipeline/virtual/: config_parser.cpp
src/libcamera/pipeline/virtual-softisp/: meson.build  softisp.cpp  softisp.h
src/libcamera/pipeline/virtual_softisp/: softisp.cpp  softisp.h
src/libcamera/software_isp/: swstats_cpu.cpp
src/tools/: meson.build  softisp-simple-test.cpp  softisp-test.cpp
subprojects/: libplacebo.wrap
test/: threads.cpp
test/ipa/: meson.build  softisp_inference_test.cpp  softisp_module_test.cpp  softisp_virtual_module_test.cpp
test/perf/: build_perf_test.sh  comprehensive_perf_test.sh  detailed_timing_test.sh  final_perf_report.sh  frame_timing_test.sh  ipa_timing_test.sh  perf_test  perf_test.cpp  real_timing_test.sh  show_timing.sh  simple_perf_test.sh  softisp_perf_test.sh  timing_summary.sh
test_models/: applier.onnx
tools/: meson.build  onnx-inspector.cpp  softisp-applier-debug.cpp  softisp-applier-run.cpp  softisp-check-coeffs.cpp  softisp-onnx-all-info.cpp  softisp-onnx-inference-test.cpp  softisp-onnx-inspector.cpp  softisp-onnx-shape-check.cpp  softisp-onnx-test.cpp  softisp-onnx-types.cpp  softisp-save.cpp  softisp-test-app.cpp  softisp-tool.cpp
utils/: meson.build
utils/codegen/ipc/generators/: softisp_wrapper_generator.py
