# SoftISP Simple Test Tool (Public API)
softisp_test = executable('softisp-test',
    'softisp-simple-test.cpp',
    include_directories : [
        include_directories('../../include'),
    ],
    dependencies : [
        dependency('libcamera'),
        dependency('threads'),
    ],
    install : false,
)
