# SPDX-License-Identifier: CC0-1.0
# SoftISP Pipeline Handler

libcamera_internal_sources += files([
    # PipelineHandlerSoftISP
    'PipelineSoftISP_constructor.cpp',
    'PipelineSoftISP_destructor.cpp',
    'PipelineSoftISP_match.cpp',
    'PipelineSoftISP_configure.cpp',
    'PipelineSoftISP_start.cpp',
    'PipelineSoftISP_stopDevice.cpp',
    'PipelineSoftISP_queueRequestDevice.cpp',
    'PipelineSoftISP_exportFrameBuffers.cpp',
    'PipelineSoftISP_generateConfiguration.cpp',
    
    # SoftISPCameraData
    'SoftISPCamera_constructor.cpp',
    'SoftISPCamera_destructor.cpp',
    'SoftISPCamera_init.cpp',
    'SoftISPCamera_loadIPA.cpp',
    'SoftISPCamera_start.cpp',
    'SoftISPCamera_stop.cpp',
    'SoftISPCamera_queueRequest.cpp',
    'SoftISPCamera_exportFrameBuffers.cpp',
    'SoftISPCamera_generateConfiguration.cpp',
    'SoftISPCamera_configure.cpp',
    'SoftISPCamera_processRequest.cpp',
    'SoftISPCamera_getBufferFromId.cpp',
    'SoftISPCamera_storeBuffer.cpp',
    'SoftISPCamera_data.cpp',
    
    # SoftISPConfiguration
    'SoftISPConfig_constructor.cpp',
    'SoftISPConfig_validate.cpp',
    
    # VirtualCamera
    'virtual_camera.cpp',
])
